# soma

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Modelfile  Modelfile.finetuned  README.md  SECURITY.md  agent-orchestrator.yaml  config.py  goals.json  main.py  orchestrator.py  pyproject.toml  requirements.txt  setup.cfg  soma_config.yaml
.github/workflows/: ci.yml  security.yml
agents/: __init__.py  base.py  contribute_agent.py  pr_manager.py  scheduler.py
bootstrap/: cradle.py  dream_cycle.py  harness_versions.json  soul_audit.py
bootstrap/primitives/: code.json  contribution.json  research.json  self.json  task.json
core/: atomic_executor.py  belief.py  belief_index.py  brain.py  career.py  ci_polling.py  curiosity.py  dependency_analyzer.py  executor.py  experience.py  experiment.py  failure_analyzer.py  finetuner.py  gbrain_client.py  github.py  goals.py  harness_introspection.py  hypothesis.py  identity.py  introspection.py  llm.py  locator.py  model_router.py  planner.py  pr_monitor.py  repo_tracker.py  router.py  self_modifier.py  snapshot.py  task_complexity.py  tasks.py  tool_registry.py  tools.py  trajectory.py  verifier.py
data/: lora_config.yaml  soma_finetune.jsonl  soma_finetune_valid.jsonl
graphify-out/: .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
mcp/: soma_server.py
proposals/: agent-orchestrator-trigger-rules-spec.md
scripts/: backfill_experiences.py  build_identity.py  finetune_soma.py  generate_finetune_data.py  read.py  send.py  soma_task_ci_loop.py  soma_task_failure_classification.py  train_lora.py
skills/: import_statement_mismatch.md
tests/: test_agent_wiring.py  test_agents.py  test_atomic_executor.py  test_belief_persistence.py  test_ci_auto_retry.py  test_ci_auto_retry_integration.py  test_ci_polling.py  test_dependency_analyzer.py  test_explore_repo.py  test_failure_analyzer.py  test_finetuner.py  test_model_router.py  test_phase3_e2e.py  test_planner_decompose.py  test_task_complexity.py  test_taskqueue_wiring.py  test_toolregistry_wiring.py
