[metadata]
name = soma
version = 0.1.0
description = A self-improving autonomous developer agent
author = Pritom Mazumdar
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pritom14/soma

[options]
packages = find:
python_requires = >=3.11
install_requires =
    ollama>=0.4.0
    anthropic>=0.40.0
    pydantic>=2.0
    networkx>=3.0
    jinja2>=3.1.0
    dataclasses-json>=0.6.0
    rich>=13.0.0

[options.extras_require]
dev =
    pytest>=8.0
    ruff>=0.4.0

[options.packages.find]
where = .
